OC2-52html structure for the newsletter section

--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
     <h1>Good morning</h1>
     <h1 id="main-heading">Welcome to My Website</h1>
     
+    <section id="newsletter">
+        <h3>Signup to our news letter</h3>
+        <form>
+            <input type="email" name="" id="">
+            <input type="submit" value="Subscribe">
+        </form>
+    </section>
+    
     <button onclick="changeHeading()">Click Me!</button>
     <script src="main.js"></script>
 </body>
