OC2-53 changes the header section

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Good morning</h1>
+    <h1>Good afternoon</h1>
     <h1 id="main-heading">Welcome to My Website</h1>
     
     <button onclick="changeHeading()">Click Me!</button>
