added the section

--- a/index.html
+++ b/index.html
@@ -21,11 +21,17 @@
             <div class="line3"></div>
         </div>
     </nav>
+
+    <main>
+        <section>
+            <img src="sunset-1373171_1280.jpg" alt="" width="100%">
+        </section>
+    </main>
     <footer>
         <div class="footer-container">
             <div class="footer-logo">MyWebsite</div>
             <ul class="footer-links">
-                <li><a href="#home">Home</a></li>
+                <li><a href="#home">Home</a></li>   
                 <li><a href="#about">About</a></li>
                 <li><a href="#services">Services</a></li>
                 <li><a href="#contact">Contact</a></li>
