section image is changed

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 
     <main>
         <section>
-            <img src="sunset-1373171_1280.jpg" alt="" width="100%">
+            <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fpixabay.com%2Fimages%2Fsearch%2Fred%2F&psig=AOvVaw1MB
+            QuatOsaQ29hChayapCc&ust=1716524808615000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCKiGpZj3ooYDFQAAAAAdAAAAABAE" alt="" width="100%">
         </section>
     </main>
     <footer>
